css/cards.css
.card-container {
  display: flex;
  flex-direction: column;
}

.card {
  background-color: var(--color-coral);
  border: 2px solid var(--color-black);
  border-radius: 1rem;
  padding: 2%;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

.card-question {
  text-align: center;
}

.toggle-answer {
  background-color: rgb(248, 247, 177);
  padding: 5%;
  border-radius: 1em;
  margin: 5%;
  font-size: 1rem;
}

.tags {
  display: flex;
  justify-content: space-between;
  gap: 2%;
  flex-wrap: wrap;
}

.tag-answer {
  background-color: rgb(252, 188, 230);
  border: 2px solid var(--color-black);
  border-radius: 10px;
  padding: 2%;
  margin: 2%;
  font-size: 60%;
  text-align: center;
  width: 25%;
}

